Replace `<p>` tags with blank Javadoc lines; use `List.of(2)` over `Collections.singletonList(2)`
Two follow-ups on review feedback.

**`<p>` → blank Javadoc lines.** The first commit's `<p>` fixes were reverted by Spotless's Eclipse Javadoc formatter, which strips blank lines preceding `<p>` tags—exactly the lines Checkstyle's `JavadocParagraph` requires. The two tools' Javadoc rules conflict for `<p>`. Sidestep by using blank Javadoc lines as paragraph breaks (semantically equivalent under Javadoc HTML generation, preserved by both tools). 10 sites updated in `Parameter.java`, `Function.java`, `InputSignature.java`.

**`List.of(2)` over `Collections.singletonList(2)`.** Per Copilot-review suggestion: this file uses `List.of(...)` / `Set.of(...)` 208 times and only had two stragglers using `Collections.singletonList(...)`. Replace inline rather than add a static import; same semantics for non-null inputs (which these are).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>